# swinx

./: .gitignore  CMakeLists.txt  Contributors.md  README_CN.md  README_EN.md  README_RESOURCE.md  build.md  license.txt  linux.cmake  macos.cmake  readme.md  todo.md
doc/: 跨平台 Windows 内核对象实现机制.md  跨平台rc编译及资源管理.md
include/: basetyps.h  class.h  comcat.h  commctrl.h  commdlg.h  ctrl_types.h  ctypes.h  fileapi.h  gdi.h  guiddef.h  hook.h  imm.h  initguid.h  menu.h  mmsystem.h  multimon.h  oaidl.h  objbase.h  objidl.h  ole2.h  oleauto.h  oleidl.h  process.h  region.h  resapi.h  richedit.h  shellapi.h  shlobj.h  shlwapi.h  strapi.h  sysapi.h  tchar.h  textserv.h  unknwn.h  windows.h  windowsx.h  winerror.h  winnls.h  winuser.h  wnd.h
src/: SClipboard.cpp  SClipboard.h  SConnection.cpp  SConnection.h  SDragdrop.cpp  SDragdrop.h  SImContext.h  SRwLock.hpp  STrayIconMgr.cpp  STrayIconMgr.h  SUnkImpl.h  atoms.cpp  atoms.h  builtin_image.cpp  builtin_image.h  cairo_show_text2.cpp  cairo_show_text2.h  class.cpp  clsmgr.cpp  clsmgr.h  cmmmdlg.cpp  coffparser.cpp  coffparser.h  countmutex.h  cursoricon.cpp  cursorid.h  cursormgr.cpp  cursormgr.h  cursors.hpp  debug.h  drawtext.cpp  drawtext.h  enumformatetc.cpp  enumformatetc.h  fileapi.cpp  gdi.cpp  handle.cpp  handle.h  hook.cpp  image.hpp  (+49 more)
src/cmnctl32/: builtin_classname.h  cmnctl32.cpp  cmnctl32.h  heap.h  listbox.cpp  menu.cpp  msgbox.cpp  msgcrack.h  nativewnd.cpp  nativewnd.h
src/gtk/: gtkdlghelper.cpp
src/platform/cocoa/: SClipboard.h  SClipboard.mm  SConnBase.h  SConnection.h  SConnection.mm  SImContext.h  SNsDataObjectProxy.h  SNsDataObjectProxy.mm  SNsWindow.h  SNsWindow.mm  SScreen.h  SScreen.mm  STrayIconMgr.h  STrayIconMgr.mm  atoms.h  atoms.mm  dlghelper.mm  helper.h  helper.mm  imm.mm  keyboard.h  keyboard.mm  ole2.mm  os_state.h  os_state.mm
src/platform/linux/: SClipboard.cpp  SClipboard.h  SConnection.cpp  SConnection.h  SDragdrop.cpp  SDragdrop.h  STrayIconMgr.cpp  STrayIconMgr.h  atoms.cpp  atoms.h  dlghelper.cpp  imm.cpp  keyboard.cpp  keyboard.h  ole2.cpp
src/platform/linux/gtk/: gtkdlghelper.cpp  gtkdlghelper.h
